--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-simple-image-slider": "^2.4.1",
+    "react-slideshow-image": "^4.2.1",
     "vercel": "^28.16.7",
     "web-vitals": "^2.1.4"
   },
